Restructured project directory and updated projects section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -21,30 +21,31 @@
             <a href="#contact">Contact</a>
         </nav>
 
-        <button class="gradient-btn">Contact Me</button>
+        <!-- <button class="gradient-btn">Contact Me</button> -->
+        <a href="#contact" class="gradient-btn">Contact Me</a>
     </header>
 
     <section class="home" id="home">
         <div class="home-content">
             <h1>Hi, It's <span>Hritik</span></h1>
-            <h3>I'm a <span>Web Developer</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, officiis voluptates rerum et velit ipsum. Laboriosam perferendis, suscipit facilis velit nobis deserunt, corporis dolor consequatur ratione tenetur necessitatibus quo rerum.</p>
+            <h3>I'm a <span>Developer</span></h3>
+            <p>Aspiring Software Engineer with a strong foundation in Java, Python, and web development. Currently pursuing B.E. in Computer Science at RV Institute of Technology and Management, Bengaluru. Eager to apply academic knowledge to real-world projects and contribute to a dynamic tech team.</p>
             
             <div class="social-icons">
-                <a href="#">
+                <a href="https://github.com/hritikx02">
                     <i class="bx bxl-github"></i>
                 </a>
 
-                <a href="#">
+                <a href="https://www.linkedin.com/in/hritik-chaudhary-3a9b13311/">
                     <i class="bx bxl-linkedin-square"></i>
                 </a>
 
-                <a href="#">
+                <a href="https://www.instagram.com/hritik.2002/">
                     <i class="bx bxl-instagram-alt"></i>
                 </a>
 
-                <a href="#">
-                    <i class="bx bxl-twitter"></i>
+                <a href="https://www.figma.com/@hritikchaudhary">
+                    <i class="bx bxl-figma"></i>
                 </a>
             </div>
 
@@ -56,18 +57,18 @@
 
         <div class="home-img">
             <!-- <img src="image.jpeg" alt="MY-IMAGE"> -->
-            <img src="wpfp2.jpg" alt="MY-IMAGE">
+            <img src="images/wpfp2.jpg" alt="MY-IMAGE">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="wpfp2.jpg" alt="MY-IMAGE">
+            <img src="images/wpfp2.jpg" alt="MY-IMAGE">
         </div>
 
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla id aspernatur voluptas ea magnam excepturi repellendus blanditiis ipsum placeat maiores adipisci corrupti asperiores, porro non quasi nobis tenetur! Ut, dolore!</p>
+            <p>Aspiring Software Engineer with a strong foundation in Java, Python, and web development. Currently pursuing B.E. in Computer Science at RV Institute of Technology and Management, Bengaluru. Eager to apply academic knowledge to real-world projects and contribute to a dynamic tech team.</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
@@ -80,7 +81,7 @@
                 <div class="service-info">
                     <i class="bx bxl-figma"></i>
                     <h4>UI / UX Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo praesentium nam alias sequi odit enim veritatis quasi? Quasi numquam, sint recusandae quam quis officiis esse provident totam. Totam, nemo sunt!</p>
+                    <p>As a UI/UX designer, I focus on creating intuitive, visually appealing, and user-centric interfaces that enhance user experiences. My process involves extensive user research, wireframing, prototyping, and usability testing to ensure designs meet both user needs and business objectives. I prioritize accessibility, seamless navigation, and aesthetic consistency, crafting interfaces that are not only functional but also engaging. My expertise lies in balancing creativity and practicality to design solutions that leave a lasting impact.</p>
                 </div>
             </div>
 
@@ -88,7 +89,7 @@
                 <div class="service-info">
                     <i class="bx bx-code"></i>
                     <h4>Front End Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo praesentium nam alias sequi odit enim veritatis quasi? Quasi numquam, sint recusandae quam quis officiis esse provident totam. Totam, nemo sunt!</p>
+                    <p>As a front-end developer, I specialize in building interactive and responsive web interfaces that bring designs to life. I create user-friendly web applications that perform seamlessly across devices. I have a strong focus on optimizing performance, maintaining clean and modular code, and ensuring compatibility across browsers. By bridging the gap between design and functionality, I deliver dynamic, visually appealing, and high-performing front-end solutions.</p>
                 </div>
             </div>
 
@@ -96,7 +97,7 @@
                 <div class="service-info">
                     <i class="bx bx-code-curly"></i>
                     <h4>Backend Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo praesentium nam alias sequi odit enim veritatis quasi? Quasi numquam, sint recusandae quam quis officiis esse provident totam. Totam, nemo sunt!</p>
+                    <p>My expertise lies in crafting scalable and secure server-side solutions. In Autheclipse, I developed the back-end using Node.js and Express, managing user authentication and database integration with MySQL. I focus on building robust API structures, optimizing server performance, and ensuring secure data handling to support feature-rich applications.</p>
                 </div>
             </div>
         </div>
@@ -107,23 +108,23 @@
 
         <div class="projects-box">
             <div class="project-card">
-                <img src="proj1" alt="Project 1">
-                <h3>Project 1</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptatum nam dolores quod a inventore eveniet, qui temporibus officiis saepe iusto vitae odit sapiente neque dicta. Quis fuga doloribus iure.</p>
+                <img src="images/proj1.png" alt="Project 1">
+                <h3>Pong Frenzy</h3>
+                <p>This project presents a Pong game developed in Java, utilizing double image buffering for smooth rendering. Organized within the MyPong package, it employs object-oriented principles. The game features classic Pong gameplay, with one paddle controlled by the computer and the other by the user, showcasing Java's OOPs capabilities and advanced rendering techniques.</p>
                 <div class="btn">Review Project</div>
             </div>
 
             <div class="project-card">
-                <img src="proj2" alt="Project 2">
-                <h3>Project 2</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptatum nam dolores quod a inventore eveniet, qui temporibus officiis saepe iusto vitae odit sapiente neque dicta. Quis fuga doloribus iure.</p>
+                <img src="images/proj2.png" alt="Project 2">
+                <h3>AuthEclipse</h3>
+                <p>Created a secure authentication system with Node.js, Express, and Passport.js. Implemented user registration and login functionality, with passwords encrypted using bcrypt. Followed best practices for security and scalability. The system provides a solid foundation for user authentication in web applications.</p>
                 <div class="btn">Review Project</div>
             </div>
 
             <div class="project-card">
-                <img src="proj3" alt="Project 3">
-                <h3>Project 3</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptatum nam dolores quod a inventore eveniet, qui temporibus officiis saepe iusto vitae odit sapiente neque dicta. Quis fuga doloribus iure.</p>
+                <img src="images/proj3.png" alt="Project 3">
+                <h3>OTC Drug Management System</h3>
+                <p> In this project, we discuss the medicine or the drug that has to be given to the patient and it uses the databases to discuss the same. Here we also discuss the expiry of the medicines. Also here we discuss the products like soap, facewash etc.</p>
                 <div class="btn">Review Project</div>
             </div>
         </div>
@@ -153,20 +154,20 @@
 
     <footer class="footer">
         <div class="social-icons">
-            <a href="#">
+            <a href="https://github.com/hritikx02">
                 <i class="bx bxl-github"></i>
             </a>
 
-            <a href="#">
+            <a href="https://www.linkedin.com/in/hritik-chaudhary-3a9b13311/">
                 <i class="bx bxl-linkedin-square"></i>
             </a>
 
-            <a href="#">
+            <a href="https://www.instagram.com/hritik.2002/">
                 <i class="bx bxl-instagram-alt"></i>
             </a>
 
-            <a href="#">
-                <i class="bx bxl-twitter"></i>
+            <a href="https://www.figma.com/@hritikchaudhary">
+                <i class="bx bxl-figma"></i>
             </a>
         </div>
 
@@ -193,6 +194,6 @@
         </p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
