--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h1>Hi, It's <span>Hritik</span></h1>
-            <h3>I'm a <span>Developer</span></h3>
+            <h3>I'm a <span class="typing">Developer</span></h3>
             <p>Aspiring Software Engineer with a strong foundation in Java, Python, and web development. Currently
                 pursuing B.E. in Computer Science at RV Institute of Technology and Management, Bengaluru. Eager to
                 apply academic knowledge to real-world projects and contribute to a dynamic tech team.</p>
@@ -71,7 +71,8 @@
 
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <p><br><br>Hello! I'm Hritik Chaudhary, a passionate and driven third-year Computer Science student at RV Institute
+            <p><br><br>Hello! I'm Hritik Chaudhary, a passionate and driven third-year Computer Science student at RV
+                Institute
                 of Technology and Management, Bengaluru. With a strong foundation in Java, Python, HTML, CSS,
                 JavaScript, Django, Node.js, and more, I strive to create innovative, efficient, and user-friendly
                 applications. <br><br></p>
@@ -290,6 +291,9 @@
         </p>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"
+        integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
 </body>
 
