Using formsubmit.co for email functionality

--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
                             <div class="timeline-date">2018</div>
                             <div class="timeline-content">
                                 <h3>Class X</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet deserunt aliquam quam
-                                    voluptatibus, vel dicta.</p>
+                                <p>Completed Class X from Vidya Sanskar International School, Faridabad, securing a
+                                    strong foundation in core subjects like Mathematics and Science. Demonstrated
+                                    academic excellence and discipline.</p>
                             </div>
                         </div>
 
@@ -119,8 +120,9 @@
                             <div class="timeline-date">2020</div>
                             <div class="timeline-content">
                                 <h3>Class XII</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet deserunt aliquam quam
-                                    voluptatibus, vel dicta.</p>
+                                <p>Graduated from Modern Public School, Motihari, with a specialization in Science.
+                                    Focused on advanced topics in Physics, Chemistry, and Mathematics, paving the way
+                                    for a career in technology.</p>
                             </div>
                         </div>
 
@@ -129,8 +131,9 @@
                             <div class="timeline-date">2021 - Ongoing</div>
                             <div class="timeline-content">
                                 <h3>B.E in CSE</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet deserunt aliquam quam
-                                    voluptatibus, vel dicta.</p>
+                                <p>Currently pursuing a Bachelor's in Computer Science at RV Institute of Technology and
+                                    Management, Bengaluru. Engaged in developing technical expertise in programming,
+                                    data structures, and full-stack development.</p>
                             </div>
                         </div>
 
@@ -139,8 +142,9 @@
                             <div class="timeline-date">2024</div>
                             <div class="timeline-content">
                                 <h3>Intern @ Juniper Networks</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet deserunt aliquam quam
-                                    voluptatibus, vel dicta.</p>
+                                <p>Preparing to start a Software Development Internship at Juniper Networks, where I aim
+                                    to gain hands-on experience in developing scalable software solutions and
+                                    collaborating with a professional team.</p>
                             </div>
                         </div>
                     </div>
@@ -230,7 +234,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="#">
+        <form action="https://formsubmit.co/hritikchoudhary943@gmail.com" method="POST">
             <div class="input-group-1">
                 <div class="input-box">
                     <input type="text" placeholder="Full Name">
