--- a/index.html
+++ b/index.html
@@ -235,19 +235,25 @@
         <h2 class="heading">Contact <span>Me</span></h2>
 
         <form action="https://formsubmit.co/5d3e714a2c37c270165932e5d9ff059f" method="POST">
+            <!--Honeypot-->
+            <input type="text" name="_honey" style="display: none;">
+
+            <!--Disable Captcha-->
+            <input type="hidden" name="_captcha" value="false">
+
             <div class="input-group-1">
                 <div class="input-box">
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email">
+                    <input type="text" placeholder="Full Name" name="Name" required>
+                    <input type="email" placeholder="Email" name="E-Mail" required>
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Phone Number">
-                    <input type="email" placeholder="Subject">
+                    <input type="number" placeholder="Phone Number" name="Phone">
+                    <input type="text" placeholder="Subject" name="Subject">
                 </div>
             </div>
 
             <div class="input-group-2">
-                <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
+                <textarea name="" id="" placeholder="Your Message" cols="30" rows="10" name="Comments,&nbsp;Queries"></textarea>
                 <input type="submit" value="Send Message" class="btn">
             </div>
         </form>
