Added a success page on submiting contact form

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
             <!--Disable Captcha-->
             <input type="hidden" name="_captcha" value="false">
 
+            <!--Submission Page-->
+            <input type="hidden" name="_next" value="https://hritikx02.github.io/Portfolio/form-submit.html">
+
             <div class="input-group-1">
                 <div class="input-box">
                     <input type="text" placeholder="Full Name" name="Name" required>
@@ -253,7 +256,7 @@
             </div>
 
             <div class="input-group-2">
-                <textarea name="" id="" placeholder="Your Message" cols="30" rows="10" name="Comments,&nbsp;Queries"></textarea>
+                <textarea placeholder="Your Message" cols="30" rows="10" name="Comments,&nbsp;Queries"></textarea>
                 <input type="submit" value="Send Message" class="btn">
             </div>
         </form>
