Fixed navigation of form-submit.html on submitting contact form

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </div>
 
             <div class="input-group-2">
-                <textarea placeholder="Your Message" cols="30" rows="10" name="Comments,&nbsp;Queries"></textarea>
+                <textarea placeholder="Your Message" cols="30" rows="10" name="Comments,&nbsp;Queries" required></textarea>
                 <input type="submit" value="Send Message" class="btn">
             </div>
         </form>
