--- a/form-submit.html
+++ b/form-submit.html
@@ -11,20 +11,20 @@
 
 <body>
     <header class="header">
-        <a href="https://hritikx02.github.io/Portfolio/" class="logo">Hritik <span>Chaudhary</span></a>
+        <a href="index.html" class="logo">Hritik <span>Chaudhary</span></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about" class="active">About</a>
-            <a href="#services">Services</a>
-            <a href="#projects">Projects</a>
+            <a href="index.html#home" class="active">Home</a>
+            <a href="index.html#about" class="active">About</a>
+            <a href="index.html#services">Services</a>
+            <a href="index.html#projects">Projects</a>
             <a href="assets/Hritik_Chaudhary_Resume.pdf" download="Hritik_Chaudhary_Resume.pdf" target="_blank"
                 class="res-btn">Resume</a>
         </nav>
 
-        <a href="#contact" class="gradient-btn">Contact Me</a>
+        <a href="index.html#contact" class="gradient-btn">Contact Me</a>
     </header>
 
     
@@ -59,19 +59,19 @@
 
         <ul class="list">
             <li>
-                <a href="#">FAQ</a>
+                <a href="index.html">FAQ</a>
             </li>
             <li>
-                <a href="#about">About Me</a>
+                <a href="index.html#about">About Me</a>
             </li>
             <li>
-                <a href="#services">Services</a>
+                <a href="index.html#services">Services</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="index.html#projects">Projects</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="index.html#contact">Contact</a>
             </li>
         </ul>
 
