Fixed typed animation and updated style for mobile's viewport

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h1>Hi, It's <span>Hritik</span></h1>
-            <h3>I'm a <span class="typing">Developer</span></h3>
+            <h3>I'm a <span class="typing"></span></h3>
             <p>Aspiring Software Engineer with a strong foundation in Java, Python, and web development. Currently
                 pursuing B.E. in Computer Science at RV Institute of Technology and Management, Bengaluru. Eager to
                 apply academic knowledge to real-world projects and contribute to a dynamic tech team.</p>
