Separate css file for form-submit.html

--- a/form-submit.html
+++ b/form-submit.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/form-submit.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -30,11 +31,11 @@
     
 
     <section class="submit-form" id="submit-form">
-        <h2 class="heading">Contact <span>Me</span></h2>
+        <h2 class="sf-heading">Contact <span>Me</span></h2>
 
-        <div style="justify-items: center;">
-            <img src="images/success.png" alt="Message Sent" style="margin: 3rem; max-width: 15rem;">
-            <p style="font-size: x-large; text-align: center;">Success! We will get back to you ASAP.</p>
+        <div class="submit-form-content">
+            <img src="images/success.png" alt="Message Sent">
+            <p>Success! We will get back to you ASAP.</p>
         </div>
     </section>
 
